src/objects/AC_User_Segment__c.object
<CustomObject>
    <description>Actual user groups (ex. all members)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is user segment active for use</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Available in segment manager</description>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Help_Text__c</fullName>
        <description>explains to user what segment means</description>
        <label>Portal Help Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AC User Segment</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>Default</value>
        </filters>
        <filters>
            <field>Available__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Available__c</columns>
        <columns>Query__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inactive</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Available__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Inactive</label>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC User Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>